--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="starwarsintro.css">
 <head>
 <link rel="preload" href="main_theme.ogg" as="audio">
-<link rel="preload" href="main_theme.mp3" as="audio">
+<link rel="preload" href="Soarin.mp3" as="audio">
 </head>
 <!-- Place in Body where you'd like intro to appear -->
 <div class="star-wars-intro">
