--- a/index.htm
+++ b/index.htm
@@ -1,10 +1,6 @@
 <!-- Place in document head -->
+<link rel="stylesheet" href="/path/to/starwarsintro.css">
 
-<link rel="stylesheet" href="starwarsintro.css">
-<head>
-<link rel="preload" href="main_theme.ogg" as="audio">
-<link rel="preload" href="Soarin.mp3" as="audio">
-</head>
 <!-- Place in Body where you'd like intro to appear -->
 <div class="star-wars-intro">
 
@@ -15,7 +11,7 @@
 
   <!-- Logo Image or Text goes in here -->
   <h2 class="main-logo">
-    <img src="assets/sw.png">
+    <img src="img/star-wars-intro.png">
   </h2>
 
   <!-- All Scrolling Content Goes in here -->
