--- a/index.htm
+++ b/index.htm
@@ -1,5 +1,5 @@
 <!-- Place in document head -->
-<link rel="stylesheet" href="/path/to/starwarsintro.css">
+<link rel="stylesheet" href="starwarsintro.css">
 
 <!-- Place in Body where you'd like intro to appear -->
 <div class="star-wars-intro">
