--- a/index.htm
+++ b/index.htm
@@ -11,7 +11,7 @@
 
   <!-- Logo Image or Text goes in here -->
   <h2 class="main-logo">
-    <img src="img/sw.png">
+    <img src="Assets/sw.png">
   </h2>
 
   <!-- All Scrolling Content Goes in here -->
