--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   
   <link rel="stylesheet" href="starwarsintro.css">
-  <audio autoplay> <source src="soarin.mp3" type="audio/mpeg"></audio>
+  <audio src="./audio/soarin.mp3" autoplay="autoplay" loop="loop"></audio>
   <title>Star Wars Intro</title>
 
   <style type="text/css">
