--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   
   <link rel="stylesheet" href="starwarsintro.css">
+  <link rel="preload" href="soarin.mp3" as="audio">
   <audio src="img/soarin.mp3" autoplay="autoplay" loop="loop"></audio>
   <title>Star Wars Intro</title>
 
