--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   
   <link rel="stylesheet" href="starwarsintro.css">
-  <link rel="preload" href="soarin.mp3" as="audio">
+  <link rel="preload" href="img/soarin.mp3" as="audio">
   <title>Star Wars Intro</title>
 
   <style type="text/css">
