--- a/index.html
+++ b/index.html
@@ -13,89 +13,35 @@
 
   <title>Star Wars Intro</title>
 
-  <style type="text/css">
-    body, h1, h2, h3, h4, h5, h6, p, a, td, li, .btn {
-      font-family: 'Lato', Helvetica, sans-serif;
-      -webkit-font-smoothing: antialiased;
-      -moz-osx-font-smoothing: grayscale;
-    }
 
-    .pad {
-      padding: 60px 10px; 
-    }
-    .container {
-      max-width: 900px;
-    }
-    h1, h2, h3, h4, h5, h6 {
-      font-weight: 700;
-    }
-    h1 {
-      font-size: 45px;
-      line-height: 55px;
-    }
-    h2 {
-      font-size: 35px;
-      line-height: 45px;
-      margin-top: 60px;
-    }
-    footer {
-      background-color: #111;
-      padding: 40px 20px;
-      color: white;
-    }
-    footer a {
-      color: white;
-    }
-    footer a:hover,
-    footer a:active,
-    footer a:focus {
-      color: white;
-      text-decoration: none;
-      opacity: .7;
-    }
-    .btn-white-outline {
-      background-color: transparent;
-      border-color: white;
-      border-width: 2px;
-      color: white;
-    }
+<!-- Place in Body where you'd like intro to appear -->
+<div class="star-wars-intro">
 
-    .btn.btn-white-outline:hover,
-    .btn.btn-white-outline:active,
-    .btn.btn-white-outline:focus {
-      background-color: white;
-      border-color: white;
-      color: #FF5E52;
-      box-shadow: none;
-    }
+  <!-- Blue Intro Text -->
+  <p class="intro-text">
+    A few days ago, during...
+  </p>
 
-    .btn-primary-outline {
-      background-color: transparent;
-      border-color: #FF5E52;
-      border-width: 2px;
-      color: #FF5E52;
-    }
-    .container-md {
-      max-width: 500px;
-    }
-    .download-wrapper {
-      position: absolute;
-      right: 15px;
-      top: 15px;
-      z-index: 999999999;
-    }
-    .btn-outline {
-      border: 2px solid #EBD71C;
-      color: #EBD71C;
-      font-weight: bold;
-      text-transform: uppercase;
-      padding: 10px 20px;
-    }
-    .btn-outline:hover,
-    .btn-outline:active,
-    .btn-outline:focus {
-      background-color: #EBD71C;
-      color: black;
-    }
-  </style>
-</head>
+  <!-- Logo Image or Text goes in here -->
+  <h2 class="main-logo">
+    <img src="img/star-wars-intro.png">
+  </h2>
+
+  <!-- All Scrolling Content Goes in here -->
+  <div class="main-content">
+
+    <div class="title-content">
+      <p class="content-header">EPISODES IV-VI<br/>A Movie Marathon</p>
+
+      <br>
+
+      <p class="content-body">
+        After years of galactic silence, civilization is on the brink of a new Star Wars release. Now, with the Force preparing to awaken, the people of Earth seek solace in films of old. With nowhere to turn, they gather in great numbers and watch the original trilogy without rest. Three films. 6 hours. 24 minutes. Popcorn. Slushies. Total elation.
+      </p>
+
+      <!-- button or link or whatever -->
+      <a href="./StarScroll.zip" class="space-button">Download The Code Now!</a>
+        
+    </div>
+  </div>
+</div>
