--- a/index.html
+++ b/index.html
@@ -1,18 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <link rel="preload" href="img/soarin.mp3" as="audio">
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <link rel="shortcut icon" type="image/png" href="favicon.png"/>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-  
-  <link rel="stylesheet" href="starwarsintro.css">
-
-  <title>Star Wars Intro</title>
-
+<!-- Place in document head -->
+<link rel="stylesheet" href="/path/to/starwarsintro.css">
 
 <!-- Place in Body where you'd like intro to appear -->
 <div class="star-wars-intro">
