--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!-- Place in document head -->
 <link rel="stylesheet" href="/path/to/starwarsintro.css">
+<link rel="preload" href="soarin.mp3" as="audio">
 
 <!-- Place in Body where you'd like intro to appear -->
 <div class="star-wars-intro">
