--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head><!-- Place in document head -->
-<link rel="stylesheet" href="/path/to/starwarsintro.css">
+<link rel="stylesheet" href="starwarsintro.css">
 <link rel="preload" href="soarin.mp3" as="audio">
 </head>
 <!-- Place in Body where you'd like intro to appear -->
