--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Soarin' Yo</title>
+        <title>Abstract</title>
         <meta charset="UTF-8" />
         <meta
             name="viewport"
