--- a/index.html
+++ b/index.html
@@ -76,15 +76,10 @@
                 </div>
             </div>
         </div>
-        <audio
-            controls
-            autoplay
-        >
-            <source
-                src="./soarin.mp3"
-                type="audio/mpeg"
-            />
-            Your browser does not support the audio element.
-        </audio>
+        <script>
+            var delayInSeconds = 2;
+            var audio = new Audio('./soarin.mp3');
+            setTimeout(() => audio.play(), delayInSeconds * 1000);
+        </script>
     </body>
 </html>
