--- a/index.html
+++ b/index.html
@@ -85,9 +85,19 @@
                 </div>
             </div>
         </div>
+        <audio
+            controls
+            id="audioeeyoeeyo"
+        >
+            <source
+                src="./soarin.mp3"
+                type="audio/mpeg"
+            />
+            Your browser does not support the audio element.
+        </audio>
         <script>
             var delayInSeconds = 2.5;
-            var audio = new Audio('./soarin.mp3');
+            var audio = document.getElementById('audioeeyoeeyo')
             setTimeout(() => audio.play(), delayInSeconds * 1000);
         </script>
     </body>
