--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <br />
 
                     <div class="content-body">
-                        <p></p>
+                        <p>
                             According to The Governor’s Office of Student
                             Achievement, in August 2013 and January 2014,
                             education stakeholders from the public and private
@@ -97,7 +97,7 @@
         </audio>
         <script>
             var delayInSeconds = 2.5;
-            var audio = document.getElementById('audioeeyoeeyo')
+            var audio = document.getElementById('audioeeyoeeyo');
             setTimeout(() => audio.play(), delayInSeconds * 1000);
         </script>
     </body>
